tests/fixtures/invalid-only/non-compliant-second.php
<?php

declare(strict_types=1);

$nonCompliant = array(2, 3);
